--- a/app/src/main/res/layout/home_page_dipendente_comunale.xml
+++ b/app/src/main/res/layout/home_page_dipendente_comunale.xml
@@ -259,7 +259,22 @@
          android:layout_height="wrap_content"
          android:layout_above="@id/navigationView"
          android:onClick="ModificaCalendario" />-->
+    <com.synnapps.carouselview.CarouselView
+        android:id="@+id/carouselView"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_above="@id/navigationView"
+        app:autoPlay="false"
+        app:fillColor="@color/colorPrimary"
+        app:pageColor="#FFFFFF"
+        app:radius="4dp"
+        app:strokeColor="@color/colorPrimary"
+        app:strokeWidth="1dp">
+        <!-- app:slideInterval="3000"-->
 
+    </com.synnapps.carouselview.CarouselView>
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigationView"
         android:layout_width="match_parent"
