--- a/app/src/main/res/layout/first_carousel_page_home_dc.xml
+++ b/app/src/main/res/layout/first_carousel_page_home_dc.xml
@@ -57,4 +57,30 @@
             android:layout_height="wrap_content"
             android:text=" %"/>
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/navigationView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="20dp"
+        android:onClick="nuovoAvviso"
+        android:orientation="vertical">
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+
+            android:src="@drawable/white_plus" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold|italic"
+            android:textColor="@color/black"
+            android:text="Nuovo avviso"/>
+    </LinearLayout>
 </RelativeLayout>
