--- a/app/src/main/res/layout/visualizza_avviso_dipendente_comunale.xml
+++ b/app/src/main/res/layout/visualizza_avviso_dipendente_comunale.xml
@@ -177,11 +177,14 @@
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigationView"
         android:layout_width="match_parent"
-        android:layout_height="47dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:itemIconTint="@drawable/bottom_navigation_colors2"
-        app:itemTextColor="@drawable/bottom_navigation_colors2"
-        app:menu="@menu/navigation" />
+        android:background="@android:color/transparent"
+        app:itemIconTint="@color/black"
+        app:itemTextColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/navigation_dipendente_comunale" />
+
 
 
 </RelativeLayout>
