--- a/app/src/main/res/layout/raccolta_punti.xml
+++ b/app/src/main/res/layout/raccolta_punti.xml
@@ -191,15 +191,28 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp">
-
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="Tari iniziale "
                 android:textColor="@color/black"
                 android:textSize="22sp"
                 android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="TariDialog"
+                    android:layout_gravity="start"
+                    android:text="(?)"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tariIniziale"
